views/themes/activity/assets/stylesheets/activity/activity.scss
.qor-theme-activity{
    .mdl-layout__tab-bar{
        height: 48px;
        background-color: #0277bd;
    }
    .qor-slideout__body .mdl-layout__container{
        position: static;
    }
    .qor-sliderout__activity-container{
        margin: -16px -24px;
        width: auto;
        .mdl-layout__tab-bar-button{
            display: none;
        }
        .mdl-layout__tab-bar{
            width: 100%;
        }
    }
    .qor-slideout--activity-content{
        width: 100%;
        .mdl-layout__tab-panel{
            padding: 16px 24px;
        }
    }
    .qor-tab-bar--activity-header{
        min-height: 48px;
        height: 48px;
        background-color: #0277bd;
        .mdl-layout__tab-bar{
            background-color: #0277bd;
        }
        .mdl-layout__tab-bar-container{
            height: 48px;
        }
        .mdl-layout__tab{
            height: 48px;
            line-height: 48px;
        }
    }
    .qor-activity__list{
        background-color: #f5f5f5;
        padding: 16px;
        border-radius: 4px;
        margin-bottom: 16px;
        position: relative;
        .qor-activity__list-date{
            font-size: 12px;
            color: rgba(0,0,0,.54);
        }
        img{
            max-width: 100%;
        }
        .qor-activity__edit-button, .qor-activity__edit-save-button{
            position: absolute;
            bottom: 12px;
            right: 16px;
        }
        .qor-activity__edit-save-button{
          display: none;
        }
        .qor-activity__list-content{
            margin-top: 16px;
            font-size: 14px;
            margin-bottom: 14px;
        }
        .qor-activity__edit-feilds{
            width: calc(100% - 77px);
            display: none;
            input{
                font-size: 14px;
                font-family: "Roboto", "Helvetica", "Arial", sans-serif;
            }
        }
        .qor-activity__list-note {
            padding-top: 2px;
            padding-bottom: 3px;
            display: inline-block;
        }
        .show{
            display: inline-block;
        }
        .hide{
            display: none;
        }
        .mdl-textfield {
          padding: 0;
        }
        .mdl-textfield__label::after {
            bottom: 0;
        }
    }

    .qor-activities__new {
      .qor-field__show {
        display: none;
      }

      .qor-field__edit {
        display: block;
      }

      .qor-form__actions {
        margin: 0 0 24px;
      }
    }

    .qor-page__header{
        & + .qor-page__edit, & + .qor-page__show{
            padding-top: 0;
        }
    }

    .qor-page__edit,.qor-page__show{
        .qor-sliderout__activity-container{
            margin: 0;
        }
        .qor-tab-bar--activity-header .mdl-layout__tab-bar{
            background-color: #0277bd;
        }
        .qor-form-container{
            margin: 8px 0;
        }
    }

    .qor-slideout__body{
        .qor-tab-bar--activity-header .mdl-layout__tab-bar{
            background-color: #03a9f4;
        }
    }
}

@media screen and (max-width: 1024px){
    .qor-theme-activity{
        .qor-tab-bar--activity-header{
            display: block;
        }
    }
}

